# nugmail

./: .gitignore  Cargo.toml  README.md
schema/: mock-data.sql  schema.sql
src/: email.rs  lib.rs  main.rs  tui.rs  webhook_site.rs
src/generator/: mod.rs  webhook_site.rs
src/storage/: error.rs  mod.rs  sqlite.rs
