[package]
name = "nugmail"
version = "0.1.0"
authors = ["Seif Kamal <seifskm@gmail.com>"]
edition = "2018"

[dependencies]
clap = "~2.33.0"
termion = "~1.5.5"
dialoguer = "~0.5.0"
isahc = { version = "~0.9", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
rusqlite = "~0.21.0"
